// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MintModal Component Test Renders with all variables correctly 1`] = `
<div>
  <h1>
    Modal COMPONENT
  </h1>
  <h2>
    MintView COMPONENT
  </h2>
</div>
`;

exports[`MintModal Component Test Renders without account correctly 1`] = `
<div>
  <h1>
    Modal COMPONENT
  </h1>
  <div
    class="flex justify-center items-center p-6"
  >
    <div
      class="flex flex-col gap-8 items-center justify-center"
    >
      <p>
        Please make sure that you are connected with your Wallet!
      </p>
    </div>
  </div>
</div>
`;

exports[`MintModal Component Test Renders without image correctly 1`] = `
<div>
  <h1>
    Modal COMPONENT
  </h1>
  <div
    class="flex justify-center items-center p-6"
  >
    <div
      class="flex flex-col gap-8 items-center justify-center"
    >
      <p>
        Couldn't convert the image to the required format!
      </p>
    </div>
  </div>
</div>
`;

exports[`MintModal Component Test Renders without nftContract correctly 1`] = `
<div>
  <h1>
    Modal COMPONENT
  </h1>
  <div
    class="flex justify-center items-center p-6"
  >
    <div
      class="flex flex-col gap-8 items-center justify-center"
    >
      <p>
        Please make sure that you are connected with your Wallet!
      </p>
    </div>
  </div>
</div>
`;
